# zecledger

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  PROCESS.md  README.md  SECURITY.md  full_report.json  install.sh  mainnet_report.json  my_first_report.csv  pdf.csv  pdf.json  project-tree.txt  report.json  research_data.json  research_data_500tx_verified.json  zecledger_ledger_20260615_111743.csv  zecledger_ledger_20260615_111743.json
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml  spike.yml
src/: main.rs
src/accounting/: mod.rs
src/cli/: mod.rs  welcome.rs
src/copilot/: mod.rs
src/core/: config.rs  mod.rs
src/data/: mod.rs
src/output/: mod.rs  tui.rs
src/payments/: mod.rs
src/reporting/: mod.rs
src/wallet/: account.rs  cache.rs  costbasis.rs  db.rs  history.rs  mod.rs  passphrase.rs  privacy.rs  reconcile.rs  report.rs  request.rs
