[package]
name = "zecledger"
version = "0.1.0"
edition = "2021"
description = "AI-powered Zcash research copilot"

[[bin]]
name = "zecledger"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
printpdf = "0.7"
ratatui = "0.27"
crossterm = "0.27"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
