[package]
name = "zecledger"
version = "0.1.0"
edition = "2021"
description = "AI-powered Zcash research copilot"

[[bin]]
name = "zecledger"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4.40", features = ["serde"] }
csv = "1"
printpdf = "0.7"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
