[package]
name = "zecledger"
version = "0.1.3"
edition = "2021"
description = "Read-only Zcash shielded accounting from your viewing key"

[[bin]]
name = "zecledger"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4.40", features = ["serde"] }
csv = "1"
anyhow = "1.0"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }

# --- Zcash light-client stack (Phase 1: shielded accounting) ---
zcash_client_backend = { version = "0.23", features = ["sync", "orchard", "transparent-inputs", "lightwalletd-tonic-transport", "lightwalletd-tonic-tls-webpki-roots", "unstable"] }
zcash_client_sqlite = { version = "0.21", features = ["orchard", "transparent-inputs", "unstable"] }
zcash_keys = { version = "0.14", features = ["orchard"] }
zcash_protocol = "0.9"
zcash_address = "0.12"
zip321 = "0.8"
rand = "0.8"
async-trait = "0.1"
prost = "0.14"
zcash_primitives = "0.28"
rusqlite = { version = "0.37", features = ["bundled-sqlcipher-vendored-openssl", "trace"] }
rpassword = "7.5"

# Only needed to detect a double-clicked console on Windows, so the welcome
# message can hold the window open instead of vanishing.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
